# aa-esi-status

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: automated-checks.yml
.make/: config.ini
.make/conf.d/: django.mk  tests.mk
esistatus/: __init__.py  app_settings.py  apps.py  auth_hooks.py  constants.py  models.py  tasks.py  urls.py  utils.py  views.py
esistatus/handler/: cache.py
esistatus/helper/: static_files.py
esistatus/locale/: django.pot
esistatus/locale/cs/LC_MESSAGES/: django.mo  django.po
esistatus/locale/cs_CZ/LC_MESSAGES/: django.mo  django.po
esistatus/locale/de/LC_MESSAGES/: django.mo  django.po
esistatus/locale/es/LC_MESSAGES/: django.mo  django.po
esistatus/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
esistatus/locale/it_IT/LC_MESSAGES/: django.mo  django.po
esistatus/locale/ja/LC_MESSAGES/: django.mo  django.po
esistatus/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
esistatus/locale/nl/LC_MESSAGES/: django.po
esistatus/locale/nl_NL/LC_MESSAGES/: django.mo  django.po
esistatus/locale/pl_PL/LC_MESSAGES/: django.mo  django.po
esistatus/locale/ru/LC_MESSAGES/: django.mo  django.po
esistatus/locale/sk/LC_MESSAGES/: django.mo  django.po
esistatus/locale/uk/LC_MESSAGES/: django.mo  django.po
esistatus/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
esistatus/migrations/: 0001_initial.py  0002_openapi_status.py  0003_esistatus_total_endpoints.py  0004_esi_name.py
esistatus/providers/: applogger.py  cache.py
esistatus/static/esistatus/css/: aa-bootstrap-fix.css  aa-bootstrap-fix.min.css  esistatus.css  esistatus.min.css  esistatus.min.css.map
esistatus/static/esistatus/javascript/: esistatus-dashboard-widget.js  esistatus-dashboard-widget.min.js  esistatus-dashboard-widget.min.js.map  esistatus.js  esistatus.min.js  esistatus.min.js.map
esistatus/static/esistatus/legacy_templates/css/: esistatus.css
esistatus/templates/esistatus/: base.html  dashboard-widget.html  index.html
esistatus/templates/esistatus/bundles/: esistatus-css.html  esistatus-dashboard-widget-js.html  esistatus-js.html
esistatus/templates/esistatus/legacy_templates/: base.html  index.html
esistatus/templates/esistatus/legacy_templates/partials/: endpoints.html
esistatus/templates/esistatus/partials/: endpoints.html  green_endpoints.html  red_endpoints.html  yellow_endpoints.html
esistatus/templates/esistatus/partials/dashboard-widget/: esi-status.html
esistatus/templates/esistatus/partials/footer/: app-translation-footer.html
esistatus/templates/esistatus/partials/header/: page-header.html
esistatus/templates/esistatus/partials/index/: esi-status.html
esistatus/templatetags/: esistatus.py
esistatus/tests/: test_access.py  test_auth_hooks.py  test_handler_cache.py  test_providers.py  test_providers_applogger.py  test_providers_cache.py  test_settings.py  test_tasks.py  test_templatetags.py  test_views.py  utils.py
esistatus/tests/fixtures/: esistatus.json  openapi-spec.json  openapi-status.json
locale/: es.json  fr_FR.json  it_IT.json  ko_KR.json  ru.json
testauth/: __init__.py  celery.py  local.py  settings.py  settings_aa3x.py  urls.py
testauth/settings/: local.py
